@@ -30,7 +30,7 @@
 	}
 	
 	.right-panel{
-		width:900px;
+		max-width:900px;
 	}
 	
 	.search-results{
