@@ -94,7 +94,6 @@ class StatisticMergeOrderView(ModelView):
     
     def get(self, request, *args, **kwargs):
         
-
         content  = request.REQUEST
         start_dt = content.get('df')
         end_dt   = content.get('dt')
@@ -402,6 +401,7 @@ def change_trade_addr(request):
     for (key, val) in CONTENT.items():
          setattr(trade, key, val)
     trade.save()
+    
     try:
         if trade.type in (pcfg.TAOBAO_TYPE,pcfg.FENXIAO_TYPE,pcfg.GUARANTEE_TYPE) and trade.sys_status==pcfg.WAIT_AUDIT_STATUS:
             response = apis.taobao_trade_shippingaddress_update(tid=trade.tid,
@@ -626,40 +626,45 @@ def change_logistic_and_outsid(request):
     try:
         logistic   = LogisticsCompany.objects.get(code=logistic_code)
         logistic_regex = re.compile(logistic.reg_mail_no)
-        if logistic_regex.match(out_sid): 
-            if merge_trade.sys_status in (pcfg.WAIT_CHECK_BARCODE_STATUS,pcfg.WAIT_SCAN_WEIGHT_STATUS):
-                try:
+        if not logistic_regex.match(out_sid):
+            raise Exception(u'快递单号不合规则')
+         
+        dt = datetime.datetime.now()
+        if merge_trade.sys_status in (pcfg.WAIT_CHECK_BARCODE_STATUS,pcfg.WAIT_SCAN_WEIGHT_STATUS):
+            
+            try:
+                if (dt-merge_trade.consign_time).days<1:
                     response = apis.taobao_logistics_consign_resend(tid=merge_trade.tid,out_sid=out_sid
                                                      ,company_code=logistic_code,tb_user_id=merge_trade.user.visitor_id)
                     if not response['logistics_consign_resend_response']['shipping']['is_success']:
                         raise Exception(u'重发失败')
-                except Exception,exc:
-                    dt  = datetime.datetime.now()
-                    merge_trade.sys_memo = u'%s,修改快递单号[%s]:(%s)%s'%(merge_trade.sys_memo,
-                                                                 dt.strftime('%Y-%m-%d %H:%M'),logistic_code,out_sid)
-                    logger.error(exc.message,exc_info=True)
-    
-                merge_trade.logistics_company = logistic
-                merge_trade.out_sid   = out_sid
-                merge_trade.save()
-                log_action(user_id,merge_trade,CHANGE,u'修改快递及单号(修改前:%s,%s)'%(origin_logistic_code,origin_out_sid))
-            elif merge_trade.sys_status == pcfg.FINISHED_STATUS:
-                try:
-                    apis.taobao_logistics_consign_resend(tid=merge_trade.tid,out_sid=out_sid
-                                                     ,company_code=logistic_code,tb_user_id=merge_trade.user.visitor_id)
-                except:
-                    pass
+            except Exception,exc:
                 dt  = datetime.datetime.now()
-                merge_trade.sys_memo = u'%s,退回重发单号[%s]:(%s)%s'%(merge_trade.sys_memo,
-                                                                 dt.strftime('%Y-%m-%d %H:%M'),logistic_code,out_sid)
-                merge_trade.logistics_company = logistic
-                merge_trade.out_sid   = out_sid
-                merge_trade.save()
-                log_action(user_id,merge_trade,CHANGE,u'快递退回重发(修改前:%s,%s)'%(origin_logistic_code,origin_out_sid))
-            else:
-                raise Exception(u'该订单不能修改')
+                merge_trade.sys_memo = u'%s,修改快递单号[%s]:(%s)%s'%(merge_trade.sys_memo,
+                                                             dt.strftime('%Y-%m-%d %H:%M'),logistic_code,out_sid)
+                logger.error(exc.message,exc_info=True)
+
+            merge_trade.logistics_company = logistic
+            merge_trade.out_sid   = out_sid
+            merge_trade.save()
+            log_action(user_id,merge_trade,CHANGE,u'修改快递及单号(修改前:%s,%s)'%(origin_logistic_code,origin_out_sid))
+        elif merge_trade.sys_status == pcfg.FINISHED_STATUS:
+            try:
+                if (dt-merge_trade.consign_time).days<1:
+                    apis.taobao_logistics_consign_resend(tid=merge_trade.tid,out_sid=out_sid
+                                                 ,company_code=logistic_code,tb_user_id=merge_trade.user.visitor_id)
+            except:
+                pass
+            dt  = datetime.datetime.now()
+            merge_trade.sys_memo = u'%s,退回重发单号[%s]:(%s)%s'%(merge_trade.sys_memo,
+                                                             dt.strftime('%Y-%m-%d %H:%M'),logistic_code,out_sid)
+            merge_trade.logistics_company = logistic
+            merge_trade.out_sid   = out_sid
+            merge_trade.save()
+            log_action(user_id,merge_trade,CHANGE,u'修改单号(修改前:%s,%s)'%(origin_logistic_code,origin_out_sid))
         else:
-            raise Exception(u'快递单号不合规则')
+            raise Exception(u'该订单不能修改')
+            
     except Exception,exc:
         ret_params = {'code':1,'response_error':exc.message}
         return HttpResponse(json.dumps(ret_params),mimetype="application/json")
